Add footer, remove case study, add gradient

--- a/src/style/sharedStyle.css
+++ b/src/style/sharedStyle.css
@@ -94,7 +94,7 @@ h5 {
 }
 
 h6 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Raleway', sans-serif;
   margin: 0px;
   text-transform: uppercase;
   color: var(--primary);
@@ -102,7 +102,7 @@ h6 {
 }
 
 p {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Raleway', sans-serif;
   margin: 0px;
   color: var(--primary);
   font-size: 20px;
@@ -342,7 +342,7 @@ span.highlight {
 #homepage {
   text-align: center;
   margin: 0 auto;
-  width: 100%;
+  width: 80%;
 }
 
 .external-link {
@@ -395,6 +395,11 @@ span.highlight {
   flex-basis: 100%;
   height: 600px;
   border-radius: 15px;
+  background: linear-gradient(180deg, rgba(248,225,108,1) 0%, rgba(218,164,154,1) 50%, rgba(167,204,237,1) 100%);
+}
+
+.case-study-summary {
+  padding: 10px 30px;
 }
 
 .case-study img {
@@ -411,7 +416,7 @@ span.highlight {
 .case-study a:hover {
   text-decoration: underline;
   opacity: 75%;
-  color: var(--link);
+  color: var(--primary);
 }
 
 .case-study h6,
